# MasterSelects

./: .browser-logs.json  .dev.vars.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  OPTIMIZATION-PLAN.md  PR-DESCRIPTION.md  PR-RESPONSE-CONCISE.md  PR-RESPONSE-DRAFT.md  PR-RESPONSE-STRATEGIC.md  PR-RESPONSE-UPDATED.md  QUICK-START.md  README.md  SECURITY-CHECKLIST.md  WHAT-CHANGED.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  wrangler.toml
.agent-runs/: claude-opus-transition-review-20260614-210803.out.json  claude-opus-transition-review-20260614-212126.out.json
.claude/: settings.local.json
.codex-packets/: audio-thrash-fix-packet.md  audio-thrash-fix-result.md  audio-thrash-review-result.md  audio-thrash-review.md  commit-msg-a.txt  commit-msg-b.txt  commit-msg-c.txt  commit-msg.txt  old-transient-spikes-reference.txt  waveform-detail-restore-packet.md  waveform-detail-restore-result.md  waveform-refresh-visibility-packet.md  waveform-refresh-visibility-result.md  waveform-stereo-parity-packet.md  waveform-stereo-parity-result.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: native-helper-release.yml  security.yml
MatAnyone2/job-clip-1784120021016-1-ul129-mrrroxhh/: clip-1784120021016-1-ul129-export_5_alpha.webm  clip-1784120021016-1-ul129-export_5_foreground.webm
MatAnyone2/job-clip-1784319000048-1-7jlr4-mrrrmvgo/: clip-1784319000048-1-7jlr4-ai_maintain_the_existing_flat_gra_1784318955397_alpha.webm  clip-1784319000048-1-7jlr4-ai_maintain_the_existing_flat_gra_1784318955397_foreground.webm
crates/gpu-hal/: build.rs
docs/: MERGE-SUMMARY.md  cloudflare-hosted-ai-setup.md  webvj-mixer-plan.md
docs/Features/: 3D-Layers.md  AI-Integration.md  Audio-Workstation.md  Audio.md  Color-Correction-Professional-Plan.md  Color-Correction.md  Credit-Claims.md  Debugging.md  Download-Panel.md  Effects.md  Export.md  FEATURES.md  Face-Analysis.md  FlashBoard.md  Flex-EQ-Visual-QA.md  GM-Sampler-Plan.md  GPU-Engine.md  Guided-Action-Runtime-Plan.md  Keyboard-Shortcuts.md  Keyframes.md  Landing-Page.md  Live-Inputs.md  MIDI-Tracks-Plan.md  Masks.md  Math-Scene-Clips-Plan.md  Media-Panel.md  Media-Runtime.md  Motion-Design.md  MuScriptor.md  Multicam-AI.md  Native-Helper.md  Node-Workspace.md  Playback-Debugging.md  Preview.md  Project-Persistence.md  Proxy-System.md  README.md  Screen-Capture.md  Security.md  SharedDecoderArchitecture.md  (+13 more)
docs/architecture/: codeplan.md
docs/lemonade/: INTEGRATION-SUMMARY.md  README.md  SPRINT-SUMMARY.md  integration-analysis.md  quality-review.md  strategic-recommendation.md  technical-analysis.md  tool-calling-error-analysis.md  (+2 more)
ffmpeg-wasm-build/: Dockerfile  build-wasm.sh  build.sh
functions/: _middleware.ts
masterselects-helper/: Cargo.toml
masterselects-helper-lite/: Cargo.toml
masterselects-helper-lite/src/: main.rs
migrations/: 0006_user_tracking.sql  0007_credit_claims.sql  0009_free_credit_offers.sql  0010_free_credit_offer_active_claim.sql  0011_credit_claim_redeem_codes.sql
native-helper/: app.js  package-lock.json  server.js
native-ui/: Cargo.toml
native-ui/src/: app.rs  audio_pipeline.rs  engine.rs  main.rs  timeline.rs
public/: clippy-intro.webm  clippy-outro.webm  clippy.webm
scripts/: analyze-trace.mjs  capture-feature-doc-screenshots.mjs  create-credit-claim.mjs  dev-full.mjs  prepare-stress-test-media.mjs  run-stress-test-bridge-fast.mjs  run-timeline-canvas-verification.mjs
src/: App.css  App.tsx  RootApp.tsx  changelog-data.json  editorBoot.ts  index.css  main.tsx  version.ts  vite-env.d.ts
tests/: parallel-decode-test.html  setup.ts
tools/native-helper/: Cargo.toml  README.md  build.rs  package.json
tools/native-helper/python/: matanyone2_server.py  muscriptor_server.py
tools/native-helper/scripts/: build-msi.bat
tools/native-helper/src/: http_server.rs  main.rs  server.rs  session.rs  tray.rs  updater.rs  utils.rs  websocket_server.rs
tools/native-helper/src/cache/: lru.rs
tools/native-helper/src/decoder/: ffmpeg.rs  hwaccel.rs  mod.rs  pool.rs
tools/native-helper/src/download/: mod.rs  ytdlp.rs
tools/native-helper/src/encoder/: job.rs
tools/native-helper/src/matanyone/: env.rs  inference.rs  mod.rs  model.rs  process.rs
tools/native-helper/src/matanyone/env/: bootstrap.rs  platform.rs  source.rs
tools/native-helper/src/muscriptor/: control.rs  env.rs  inference.rs  mod.rs  process.rs  websocket.rs
tools/native-helper/src/protocol/: commands.rs  frame.rs  mod.rs
tools/native-helper/src/session/: file_commands.rs  matanyone_commands.rs
tools/native-helper/wix/: License.rtf  main.wxs
(+2568 files in other folders)
