[package]
name = "masterselects-helper-lite"
version = "0.1.0"
edition = "2021"
authors = ["MasterSelects Team"]
description = "Lightweight YouTube downloader helper for MasterSelects (no FFmpeg required)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
anyhow = "1"
dirs = "5"

# HTTP for file serving
warp = "0.3"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
