[package]
name = "masterselects-helper"
version = "0.2.0"
edition = "2021"
authors = ["MasterSelects Team"]
description = "Cross-platform video codec helper for MasterSelects web application"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# FFmpeg bindings - supports FFmpeg 7.1 (disable filters since libavfilter isn't needed)
ffmpeg-next = { version = "7", default-features = false, features = ["codec", "format", "software-scaling"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"
lz4_flex = "0.11"
linked-hash-map = "0.5"
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# HTTP for headers parsing and file serving
http = "1"
warp = "0.3"

[target.'cfg(windows)'.dependencies]
# Windows-specific APIs for DLL loading
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
